--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <main>
     <h4>Automatic irrigation is the use of a device to operate irrigation structures, so the change of flow of water
       from bays can occur in the absence of the irrigator</h4>
+    <br>
+    <hr>
+    <a href="https://trishul-a.github.io/rakesh/">Github repository </a>
   </main>
   <footer>
     <p>
